[tool.poetry]
name = "cookpad_parsed_corpus"
version = "0.1.0"
description = ""
authors = ["himkt <himkt@cookpad.com>"]

[tool.poetry.dependencies]
python = "^3.6.1"
scikit-learn = "^0.23.2"
numpy = "^1.19.4"
click = "^7.1.2"
awscli = "^1.18.194"
seqeval = "^1.2.2"

[tool.poetry.dev-dependencies]
python-language-server = "^0.36.1"
pytest = "^6.1.2"
flake8 = "^3.8.4"
flake8-import-order = "^0.18.1"
rope = "^0.18.0"
mypy = "^0.790"
black = "^20.8b1"
hacking = "^4.0.0"
isort = "^5.6.4"

[tool.black]
line-length = 119
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

